[gd_scene load_steps=12 format=3 uid="uid://qe4e20ic7gh6"]

[ext_resource type="Script" path="res://plugins/spotify_panel/scripts/spotify_panel.gd" id="2"]
[ext_resource type="Script" path="res://scripts/helper/scroll_text_label.gd" id="2_q8llh"]
[ext_resource type="Texture2D" uid="uid://bbk3j37mfjskc" path="res://plugins/spotify_panel/icons/play.png" id="3_l1pjn"]
[ext_resource type="Texture2D" uid="uid://mbhkx5xfqfvb" path="res://plugins/spotify_panel/icons/pause.png" id="4_8lx5g"]
[ext_resource type="Texture2D" uid="uid://bx5dva3lwl48g" path="res://plugins/spotify_panel/icons/skip_back.png" id="5_e3fd5"]
[ext_resource type="Texture2D" uid="uid://cdp7roqs772kc" path="res://plugins/spotify_panel/icons/skip_forward.png" id="6_q3rvv"]
[ext_resource type="Texture2D" uid="uid://d30x5lt6rhnex" path="res://plugins/spotify_panel/icons/repeat.png" id="7_o6ubl"]
[ext_resource type="Texture2D" uid="uid://bq1yap1gtaao1" path="res://plugins/spotify_panel/icons/shuffle.png" id="8_0cj1e"]
[ext_resource type="Texture2D" uid="uid://bnp1u6vqrluvs" path="res://plugins/spotify_panel/icons/shuffle_selected.png" id="9_lalix"]
[ext_resource type="Texture2D" uid="uid://cfm2omfhoib8o" path="res://plugins/spotify_panel/icons/volume_down.png" id="10_5prxm"]
[ext_resource type="Texture2D" uid="uid://bi73hx2c382le" path="res://plugins/spotify_panel/icons/volume_up.png" id="11_b5w8l"]

[node name="SpotifyPanel" type="Control"]
custom_minimum_size = Vector2(400, 800)
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 800.0
script = ExtResource("2")

[node name="Background" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AlbumArt" type="TextureRect" parent="Background"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.13
anchor_right = 0.8
anchor_bottom = 0.43
expand_mode = 1
stretch_mode = 5

[node name="ScrollSideMargin" type="Control" parent="Background"]
clip_contents = true
layout_mode = 1
anchor_left = 0.02
anchor_right = 0.98
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TrackName" type="Label" parent="Background/ScrollSideMargin"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 0.08
text = "Playback"
horizontal_alignment = 1
script = ExtResource("2_q8llh")
separator_string = "    "
cooldown = 5.0

[node name="AlbumName" type="Label" parent="Background/ScrollSideMargin"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.45
anchor_right = 1.0
anchor_bottom = 0.45
text = "Not Active"
horizontal_alignment = 1
script = ExtResource("2_q8llh")
separator_string = "    "
cooldown = 5.0

[node name="ArtistsName" type="Label" parent="Background/ScrollSideMargin"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
text = "Yet"
horizontal_alignment = 1
script = ExtResource("2_q8llh")
separator_string = "    "
cooldown = 5.0

[node name="Controls" type="Control" parent="Background"]
anchors_preset = 0
anchor_top = 0.52
anchor_right = 1.0
anchor_bottom = 0.92

[node name="PlayPauseButton" type="TextureButton" parent="Background/Controls"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("3_l1pjn")
texture_pressed = ExtResource("4_8lx5g")
ignore_texture_size = true
stretch_mode = 5

[node name="SkipBackButton" type="TextureButton" parent="Background/Controls"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.15
anchor_bottom = 0.5
grow_vertical = 2
texture_normal = ExtResource("5_e3fd5")
ignore_texture_size = true
stretch_mode = 5

[node name="SkipForwardButton" type="TextureButton" parent="Background/Controls"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.5
anchor_right = 0.85
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("6_q3rvv")
ignore_texture_size = true
stretch_mode = 5

[node name="RepeatButton" type="TextureButton" parent="Background/Controls"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.9
anchor_right = 0.85
anchor_bottom = 0.9
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("7_o6ubl")
ignore_texture_size = true
stretch_mode = 5

[node name="ShuffleButton" type="TextureButton" parent="Background/Controls"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.9
anchor_right = 0.15
anchor_bottom = 0.9
grow_vertical = 0
toggle_mode = true
texture_normal = ExtResource("8_0cj1e")
texture_pressed = ExtResource("9_lalix")
ignore_texture_size = true
stretch_mode = 5

[node name="VolumeDownButton" type="TextureButton" parent="Background/Controls"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.05
anchor_bottom = 0.1
texture_normal = ExtResource("10_5prxm")
ignore_texture_size = true
stretch_mode = 5

[node name="VolumeUpButton" type="TextureButton" parent="Background/Controls"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.1
grow_horizontal = 0
texture_normal = ExtResource("11_b5w8l")
ignore_texture_size = true
stretch_mode = 5

[node name="DeviceOptions" type="OptionButton" parent="Background/Controls"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
alignment = 1
clip_text = true

[node name="HTTPGet" type="HTTPRequest" parent="."]

[node name="HTTPGetDevices" type="HTTPRequest" parent="."]

[node name="HTTPPost" type="HTTPRequest" parent="."]
use_threads = true

[connection signal="pressed" from="Background/Controls/PlayPauseButton" to="." method="_on_PlayPauseButton_pressed"]
[connection signal="pressed" from="Background/Controls/SkipBackButton" to="." method="_on_SkipBackButton_pressed"]
[connection signal="pressed" from="Background/Controls/SkipForwardButton" to="." method="_on_SkipForwardButton_pressed"]
[connection signal="pressed" from="Background/Controls/RepeatButton" to="." method="_on_RepeatButton_pressed"]
[connection signal="pressed" from="Background/Controls/ShuffleButton" to="." method="_on_ShuffleButton_pressed"]
[connection signal="pressed" from="Background/Controls/VolumeDownButton" to="." method="_on_VolumeDownButton_pressed"]
[connection signal="pressed" from="Background/Controls/VolumeUpButton" to="." method="_on_VolumeUpButton_pressed"]
[connection signal="item_selected" from="Background/Controls/DeviceOptions" to="." method="_on_DeviceOptions_item_selected"]
